Set up Linux (deb) packaging