@@ -4,27 +4,24 @@ set -e
 
 PACKAGER=${1}
 INSTALLER_TYPE=${2}
-MODULE_PATH=${3}
+APP_NAME=${3}
 INPUT=${4}
 OUTPUT=${5}
-JAR=${6}
-VERSION=${7}
-FILE_ASSOCIATIONS=${8}
+JAVA_RUNTIME=${6}
+JAR=${7}
+VERSION=${8}
 APP_ICON=${9}
 EXTRA_BUNDLER_ARGUMENTS=${10}
 
 ${PACKAGER} \
   create-installer ${INSTALLER_TYPE} \
-  --module-path ${MODULE_PATH} \
   --verbose \
   --echo-mode \
-  --add-modules java.base,java.datatransfer,java.desktop,java.scripting,java.xml,jdk.jsobject,jdk.unsupported,jdk.unsupported.desktop,jdk.xml.dom,javafx.controls,javafx.fxml,java.naming,java.sql,jdk.charsets \
+  --name "${APP_NAME}" \
+  --main-jar "${JAR}" \
+  --version "${VERSION}" \
   --input "${INPUT}" \
   --output "${OUTPUT}" \
-  --name Santulator \
-  --main-jar ${JAR} \
-  --version ${VERSION} \
-  --file-associations ${FILE_ASSOCIATIONS} \
-  --icon $APP_ICON \
-  $EXTRA_BUNDLER_ARGUMENTS \
-  --class io.github.santulator.gui.main.SantulatorGuiExecutable
+  --runtime-image "${JAVA_RUNTIME}" \
+  --icon "${APP_ICON}" \
+  ${EXTRA_BUNDLER_ARGUMENTS}
